test/errhandling/ferguson/throw-new-borrowed.chpl
proc main() throws {
  throw new borrowed Error();
}
